added route for About Us page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,4 @@
+<h2>TrafficSpy Analytics Suite</h2>
 
-    <h1>TrafficSpy Analytics Summary</h1>
+<p><a href="/sources">View List of Sources</a></p>
 
-    <h4>Most Requested URLs</h4>
-
-    <h4>Web Browsers Breakdown</h4>
-
-    <h4>OS Breakdown</h4>
-
-    <h4>Screen Resolution</h4>
-
-    <h4>Average Response Time per Url</h4>
-
-    <h4>View URL Specific Information Link</h4>
-
-    <h4>View Aggregate Event Data Link</h4>
