--- a/views/layout.erb
+++ b/views/layout.erb
@@ -33,12 +33,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">TrafficSpy</a>
+          <a class="brand" href="/">TrafficSpy</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/about_us">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
