--- a/views/app_stats.erb
+++ b/views/app_stats.erb
@@ -10,7 +10,7 @@
   <div class="span6">
 
     <h5>Most Requested URLs</h5>
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped table-hover">
       <th>URL</th>
       <th>Count</th>
       <% @url_results.each do |result| %>
@@ -25,7 +25,7 @@
     <br/>
 
     <h5>Browser Breakdown</h5>
-    <table class="table table-bordered">
+    <table class="table table-hover table-bordered">
       <th>Browser</th>
       <th>Count</th>
       <% @browser_results.each do |result| %>
