--- a/lib/traffic_spy/views/app_stats.erb
+++ b/lib/traffic_spy/views/app_stats.erb
@@ -1,7 +1,6 @@
 <h3>Identifier: <%= @site.identifier %></h3>
 <h4>RootUrl: <%= @site.rootUrl %></h4>
 
-
 <br/>
 <p><a href="#">View Event Statistics</a></p>
 
@@ -72,8 +71,8 @@
     <h5>Average Response Time</h5>
     <table class="table table-bordered">
       <th>URL</th>
-      <th>Avg Time</th>
-      <% @url_results.each do |result| %>
+      <th>Avg Time (ms)</th>
+      <% @response_times.each do |result| %>
       <tr>
         <td><%= result[0] %><br/></td>
         <td><%= result[1] %><br/></td>
