--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,8 @@ a {
 
 .count_col {
     width: 100px;
-/*    overflow: hidden;
-    display: inline-block;
-    white-space: nowrap;*/
+}
+
+.source_link {
+  font-size: 16px;
 }
