--- a/lib/traffic_spy/views/url_stats.erb
+++ b/lib/traffic_spy/views/url_stats.erb
@@ -11,7 +11,7 @@
     <h5>URL Response Times</h5>
     <table class="table table-bordered table-striped">
       <th>URL id</th>
-      <th>Response Times</th>
+      <th>Response Time</th>
       <% @url_results.each do |result| %>
       <tr>
         <td><%= result[0] %><br/></td>
