--- a/lib/traffic_spy/views/url_stats.erb
+++ b/lib/traffic_spy/views/url_stats.erb
@@ -1,9 +1,7 @@
-<h2>/<%=params[:rel_path]%></h2>
+<h2>URL Statistics</h2>
 
-<h3>Identifier: </h3>
-<h4>RootUrl: </h4>
-
-
+<h3>Identifier: <%=params[:identifier]%> </h3>
+<h4>Url: /<%=params[:rel_path]%></h4>
 
 <div class="row">
   <div class="span6">
