in the process of completing reqs for event details view

--- a/lib/traffic_spy/views/event_detail.erb
+++ b/lib/traffic_spy/views/event_detail.erb
@@ -1,5 +1,7 @@
 <h2>Event Statistics</h2>
 
+<p><%= @event.name %></p>
+
 <h3>Identifier: <%=params[:identifier]%> </h3>
 <h4>Event Name: <%=params[:event_name]%></h4>
 <p><a href="/sources/<%= params[:identifier] %>/events">View Events Listing</a></p>
