refactored RequestParser class

--- a/lib/traffic_spy/views/app_stats.erb
+++ b/lib/traffic_spy/views/app_stats.erb
@@ -10,7 +10,7 @@
   <div class="span6">
 
     <h5>Most Requested URLs</h5>
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" id="urls">
       <th>URL</th>
       <th>Count</th>
       <% @url_results.each do |result| %>
