--- a/lib/traffic_spy/views/campaigns.erb
+++ b/lib/traffic_spy/views/campaigns.erb
@@ -1,13 +1,19 @@
-<!doctype html>
+<h2>Campaign Analytics Summary</h2>
 
-<html>
-  <head>
-    <title>TrafficSpy Campaigns Summary</title>
-  </head>
+<h3>Identifier: <%= @site.identifier %></h3>
 
-  <body>
-    <h1>TrafficSpy Campaign Analytics Summary</h1>
-    <p> display hyperlinks to each campaign </p>
+<br/>
+<p><a href="/sources/<%=@site.identifier%>">View Site Summary Analytics</a></p>
+<p><a href="/sources/<%=@site.identifier%>/events">View Event Analytics</a></p>
 
-  </body>
-</html>
+
+<div class="row">
+  <div class="span6">
+
+   <!--  <% @campaigns.each do |campaign| %>
+
+    <p><a href="/sources/<%=@site.identifier%>/campaigns/<%=campaignn.ame%>"><%=campaign.name%></a></p>
+    <% end %> -->
+
+  </div>
+</div>
