--- a/lib/traffic_spy/views/url_stats.erb
+++ b/lib/traffic_spy/views/url_stats.erb
@@ -1,4 +1,7 @@
-<h2>URL Statistics</h2>
+<div class="page-header">
+  <h2>URL Statistics <small>Subtext for header</small></h2>
+</div>
+
 
 <h3>Identifier: <%=params[:identifier]%> </h3>
 <h4>Url: /<%=params[:rel_path]%></h4>
