--- a/lib/traffic_spy/views/event_detail.erb
+++ b/lib/traffic_spy/views/event_detail.erb
@@ -1,8 +1,15 @@
-<h2>Event Statistics</h2>
+<div class="page-header">
+  <h3>Event Analytics Summary: <%= params[:identifier] %> </h3>
+</div>
 
-<h3>Identifier: <%=params[:identifier]%> </h3>
-<h4>Event Name: <%=params[:event_name]%></h4>
-<p><a href="/sources/<%= params[:identifier] %>/events">View Events Listing</a></p>
+<ul class="nav nav-tabs">
+  <li> <a href="/sources/<%= params[:identifier] %>">Analytics Summary</a></li>
+  <li class="active"><a href="#">Event Analytics</a></li>
+  <li><a href="#">URL Analytics</a></li>
+</ul>
+
+<h4>Event Statistics for: <%=params[:event_name]%></h4>
+<p><a href="/sources/<%= params[:identifier] %>/events"><< View Events Listing</a></p>
 
 <div class="row">
   <div class="span6">
