--- a/lib/traffic_spy/views/events.erb
+++ b/lib/traffic_spy/views/events.erb
@@ -1,8 +1,12 @@
-<h2>Event Analytics Summary</h2>
+<div class="page-header">
+  <h3>Event Analytics Summary: <%= params[:identifier] %> </h3>
+</div>
 
-
-<h3>Identifier: <%= params[:identifier] %></h3>
-<p><a href="/sources/<%= params[:identifier] %>">View Application Analytics</a></p>
+<ul class="nav nav-tabs">
+  <li> <a href="/sources/<%= params[:identifier] %>">Analytics Summary</a></li>
+  <li class="active"><a href="#">Event Analytics</a></li>
+  <li><a href="#">URL Analytics</a></li>
+</ul>
 
 
 <div class="row">
