--- a/lib/traffic_spy/views/campaign_detail.erb
+++ b/lib/traffic_spy/views/campaign_detail.erb
@@ -2,6 +2,7 @@
   <h3>Campaign Events Analytics Summary: <%= params[:identifier] %> </h3>
 </div>
 
+
 <ul class="nav nav-tabs">
   <li> <a href="/sources/<%= params[:identifier] %>">Analytics Summary</a></li>
   <li class="active"><a href="/sources/<%= params[:identifier] %>/campaigns">Campaign Analytics</a></li>
@@ -17,12 +18,15 @@
     <table class="table table-hover table-bordered table-striped">
       <th>Event</th>
       <th>Count</th>
-      <% @events_results.each do |result| %>
+
+      <% @campaign_results.each do |result| %>
       <tr>
         <td><a href="/sources/<%= params[:identifier] %>/events/<%= result[0] %>"><%= result[0] %></a><br/></td>
         <td class="count_col"><%= result[1] %><br/></td>
       </tr>
+
       <% end %>
+
     </table>
 
 
