--- a/lib/traffic_spy/views/url_stats.erb
+++ b/lib/traffic_spy/views/url_stats.erb
@@ -4,7 +4,7 @@
 
 
 <h3>Identifier: <%=params[:identifier]%> </h3>
-<h4>Url: /<%=params[:rel_path]%></h4>
+<h4>Url: <%= @path %></h4>
 
 <div class="row">
   <div class="span6">
