--- a/lib/traffic_spy/views/events.erb
+++ b/lib/traffic_spy/views/events.erb
@@ -6,6 +6,7 @@
   <li> <a href="/sources/<%= params[:identifier] %>">Analytics Summary</a></li>
   <li class="active"><a href="#">Event Analytics</a></li>
   <li><a href="#">URL Analytics</a></li>
+  <li> <a href="/sources/<%= params[:identifier] %>/campaigns">Campaigns</a></li>
 </ul>
 
 
