--- a/lib/traffic_spy/views/app_stats.erb
+++ b/lib/traffic_spy/views/app_stats.erb
@@ -7,6 +7,7 @@
   <li class="active"><a href="#">Analytics Summary</a></li>
   <li><a href="/sources/<%=@site.identifier%>/events">Event Analytics</a></li>
   <li><a href="#">URL Analytics</a></li>
+  <li><a href="/sources/<%=@site.identifier%>/campaigns">Campaigns</a></li>
 </ul>
 
 <br/>
